# apps/api/internal/models/role.go
@@ -1,0 +1,17 @@
+package models
+
+type UserRole string
+
+const (
+	RoleUser  UserRole = "user"
+	RoleAdmin UserRole = "admin"
+)
+
+func (r UserRole) IsValid() bool {
+	switch r {
+	case RoleUser, RoleAdmin:
+		return true
+	default:
+		return false
+	}
+}
