# apps/api/internal/models/user.go
@@ -9,6 +9,7 @@ type User struct {
 	Username     string    `db:"username" json:"username"`
 	Email        string    `db:"email" json:"email"`
 	PasswordHash string    `db:"password_hash" json:"-"`
+	Role         UserRole  `db:"role" json:"role"`
 	XP           int64     `db:"xp" json:"xp"`
 	Level        int       `db:"level" json:"level"`
 	CreatedAt    time.Time `db:"created_at" json:"createdAt"`
